add scraper for search_page

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,11 @@ package-mode = false
 python = "^3.12"
 psycopg = {extras = ["binary"], version = "^3.2.1"}
 python-dotenv = "^1.0.1"
+requests = "^2.32.3"
+beautifulsoup4 = "^4.12.3"
+pydantic = "^2.8.2"
+markdownify = "^0.13.1"
+streamlit = "^1.38.0"
 
 
 [build-system]
